--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ body {
     background-size: 100% 100%;
     opacity: 0.7;
     text-align: center;
-    color: aliceblue;
+    color: black;
     /* text-shadow: 3px 3px 8px whitesmoke; */
     
   } 
@@ -35,7 +35,7 @@ font-size: smaller;
   font-family: Verdana;
   font-weight: 90;
   font-size: medium;
-  background-color: whitesmoke;
+  background-color: aliceblue;
 }
 
 #otu {
